Fix the issue with the height of big cta buttons on mobile devices

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -1,8 +1,14 @@
 .btn-cta-big {
   max-height: 100%;
-  height: 70px;
+  height: auto;
   font-size: 40px;
   white-space: normal;
+}
+
+@media (min-width: 768px) {
+  .btn-cta-big {
+    height: 70px;
+  }
 }
 
 .big-heading {
